--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сlock adaptive</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -19,5 +20,6 @@
   </div>
   
 </section>
+
 </body>
 </html>
