--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <h2 id="seconds">00</h2>
     <span id="ampm">AM</span>
   </div>
-  
+  <div class="copyright">
+    <p>By Abdessamad Bensaad</p>
+  </div>
 </section>
 <script  src="./script.js"></script>
 </body>
